Contact page layout bug fix.

--- a/src/styles/pages/contact.module.scss
+++ b/src/styles/pages/contact.module.scss
@@ -4,7 +4,7 @@
 	&-container {
 		margin-top: 5 * $extraspacing;
 		padding: 1.5 * $extraspacing;
-		height: 100vh;
+		min-height: 100vh;
 	}
 
 	&-title {
